--- a/app/sass/lib/_type.sass
+++ b/app/sass/lib/_type.sass
@@ -1,6 +1,6 @@
 
-$body-text: 14px, 400, 140%, 1rem
-$sm-text: 16px, 600, 140%, 1rem //h5
+$body-text: 14px, 400, 140%, 1rem, 0.6rem
+$sm-text: 16px, 600, 140%, 1rem, 0.6rem //h5
 $md-text: 20px, bold, 140%, 1rem //h4
 $lg-text: 24px, bold,140%, 1rem  //h3
 $xl-text: 28px, bold, 140%, 1rem //h2
@@ -50,7 +50,7 @@ $bold:800
             font-family: "Montserrat", sans-serif
             font-size: nth($body-text,1)
             line-height: nth($body-text,3)
-            margin-bottom: nth($body-text,4)
+            margin-bottom: nth($body-text,5)
 
         button
             font-family: "Montserrat", sans-serif
