--- a/app/sass/partials/_team.sass
+++ b/app/sass/partials/_team.sass
@@ -2,9 +2,37 @@
     main
         .teammates
             .teamgrouptitle
-                display: flex
-                flex-flow: column wrap
+                //display: flex
+                // flex-flow: column wrap
                 .teammate
-                    display: flex
-                    flex-flow: flow-wrap
+                    display: block
                     width:100%
+                    margin-bottom: 4em
+                    //color: $accent
+                    .mate_img 
+                        img
+                            height: 100px
+                            width:100px
+                            object-fit: cover
+                            border-radius: 50px
+                    .mate_info
+                        @apply text-black
+                        .mate_role
+                            margin-bottom: 1em
+                            height: 100%
+                            span
+                                padding:  0.2em 0.65em 0.3em 0.65em
+                                border: 1px solid #333333 // cómo meter variables en team
+                                border-radius: 4px
+                                font-weight: 600
+                        .mate_position
+                            span
+                                font-weight: 600
+
+
+                        .mate_description
+                            span
+                                img
+                                    height: 18px
+                                    width: 18px
+                                    
