--- a/app/sass/partials/_publications.sass
+++ b/app/sass/partials/_publications.sass
@@ -15,6 +15,9 @@
 
             .paper_date
             .paper_main
+                .paper_title
+                    h4
+                        @apply text-black
                 .paper_subtitle
                     @apply text-black
                 .paper_doi
