Página members, json members modificado - añadidos posición y coordinación, Responsive

--- a/app/sass/main.scss
+++ b/app/sass/main.scss
@@ -1837,7 +1837,7 @@ RESPONSIVE
         }
 
         .teammate {
-          padding: 3rem 2rem 3rem 2rem;
+         // padding: 3rem 2rem 3rem 2rem;
 
           .mate_info {
             width: 95%;
