--- a/app/main.scss
+++ b/app/main.scss
@@ -1584,7 +1584,7 @@ RESPONSIVE
                 }
 
                 .teammate {
-                    padding: 3rem 2rem 3rem 2rem;
+                    //padding: 3rem 2rem 3rem 2rem;
 
                     .mate_info {
                         width: 95%;
@@ -1595,7 +1595,7 @@ RESPONSIVE
                     }
 
                     h3 {
-                        padding: 2rem 0rem 1rem 0rem;
+                       // padding: 2rem 0rem 1rem 0rem;
                         font-size: 1.6rem;
                     }
 
