--- a/app/sass/main.css
+++ b/app/sass/main.css
@@ -173,35 +173,56 @@
   @apply text-primary;
 }
 
-.team main .teammates .teamgrouptitle .teammate {
+.team main .teammates .teammate {
   display: block;
-  width: 100%;
-  margin-bottom: 4em;
+  width: 80%;
+  margin-bottom: 3rem;
+  margin-left: auto;
+  margin-right: auto;
 }
-.team main .teammates .teamgrouptitle .teammate .mate_img img {
+.team main .teammates .teammate .mate_img img {
   height: 100px;
   width: 100px;
   -o-object-fit: cover;
      object-fit: cover;
   border-radius: 50px;
 }
-.team main .teammates .teamgrouptitle .teammate .mate_info {
+.team main .teammates .teammate .mate_info {
   @apply text-black;
+  margin-top: 0.6rem;
 }
-.team main .teammates .teamgrouptitle .teammate .mate_info .mate_role {
+.team main .teammates .teammate .mate_info .mate_name {
+  margin-bottom: 1rem;
+  font-size: 1.5rem;
+}
+.team main .teammates .teammate .mate_info .mate_role {
   margin-bottom: 1em;
   height: 100%;
+  margin-top: -0.3rem;
 }
-.team main .teammates .teamgrouptitle .teammate .mate_info .mate_role span {
-  padding: 0.2em 0.65em 0.3em 0.65em;
+.team main .teammates .teammate .mate_info .mate_role span {
+  padding: 0.12em 0.65em 0.25em 0.65em;
   border: 1px solid #333333;
   border-radius: 4px;
   font-weight: 600;
 }
-.team main .teammates .teamgrouptitle .teammate .mate_info .mate_position span {
-  font-weight: 600;
+.team main .teammates .teammate .mate_info .mate_position p {
+  font-size: 1em;
+  margin: 1.6rem 0 0.6rem 0;
 }
-.team main .teammates .teamgrouptitle .teammate .mate_info .mate_description span img {
+.team main .teammates .teammate .mate_info .mate_position span {
+  font-weight: 600;
+  display: inline;
+}
+.team main .teammates .teammate .mate_info .mate_coordination {
+  margin: 0.8rem 0 0 0;
+}
+.team main .teammates .teammate .mate_info .mate_coordination .coordinator {
+  @apply bg-yellow-300;
+  padding: 0.12em 0.65em 0.25em 0.65em;
+  border-radius: 24px;
+}
+.team main .teammates .teammate .mate_info .mate_description span img {
   height: 18px;
   width: 18px;
 }
@@ -1404,9 +1425,6 @@ RESPONSIVE
   .team main .teammates .teamgrouptitle h2 {
     margin-left: 20px;
     font-size: 2rem;
-  }
-  .team main .teammates .teammate {
-    padding: 3rem 2rem 3rem 2rem;
   }
   .team main .teammates .teammate .mate_info {
     width: 95%;
