CURSOS: estandarización botones y tags, añadido degradado. PROYECTOS: Comienzo maquetación scss

--- a/app/sass/partials/_projects.sass
+++ b/app/sass/partials/_projects.sass
@@ -4,11 +4,12 @@
 .project_cards
     .filter_options
         display: flex
-        
         button
             border-radius: 4px
             border-color: none
     .project_card
+        @apply bg-ca_blue-200
+        border-radius: 8px
         .year_and_cta
             display: flex
             .date
