--- a/app/sass/partials/_courses.sass
+++ b/app/sass/partials/_courses.sass
@@ -30,7 +30,7 @@ $windowWidth: 100vw
         .year_tag 
             display: flex
             div
-                background-color: rgb(0, 0, 0,0.4)
+                background-color: rgb(0, 0, 0,0.3)
                 display: flex
                 align-items: center
                 padding: 1px 8px 
@@ -38,8 +38,14 @@ $windowWidth: 100vw
                 border-radius: 4px
         .course_route
             border: 1px solid white
-            border-radius: 4px
+            border-radius: 24px
             padding: 0.2rem 0.8rem 0.6rem 0.8rem
+            transition: 200ms ease-in-out
+            &:hover
+                background: white
+                transition: 200ms ease-in-out
+                @apply text-blue-950
+
             a 
                 display: flex
             svg
@@ -49,12 +55,13 @@ $windowWidth: 100vw
                 font-size: 1rem
                 margin-left: 0.6rem
 
+
 @media (min-width: 770px)
     .course
         display: flex
         color: white
         font-weight: 400
-        height: $windowHeight  /2.25
+        height: $windowHeight  /2.5
         overflow: hidden    
         .card_container_top
             height: 32px
@@ -85,32 +92,32 @@ $windowWidth: 100vw
                 transition: ease-in-out 300ms
                 opacity: 0
                 display: none
-                transform: translateY(64%)
+           
                 margin-bottom: 0.6em
                 small
                     margin-top:0
                     display: block
-                    font-size: 0.85em
+                    font-size: 1.1rem
                     line-height: 1.4em
                     font-weight: 400
-                    max-height:80px
+                    max-height:160px
                     
                     
                 
         &:hover 
             .course_text_block
-                transform: translateY(0%)
+               
                 transition: ease-in-out 300ms
                 .course_description
                     position: relative
                     transition: ease-in-out 300ms
                     opacity: 1
-                    transform: translateY(0%)
+                  
                     max-height: $windowHeight/5
                     display: -webkit-box
                     small 
                         display: -webkit-box
-                        -webkit-line-clamp: 4
+                        -webkit-line-clamp: 6
                         -webkit-box-orient: vertical
                         overflow: hidden
                         text-overflow: ellipsis
@@ -144,7 +151,16 @@ $windowWidth: 100vw
         background: linear-gradient(to top, rgba(83,64,255,0.9) 0%, rgba(83,64,255,0.9) 30%, rgba(196,141,116,0.9) 100%), url($bg-img)
         background-size: contain
         background-position: center
-   
+
+.bg-yellow-gradient
+    background: linear-gradient(225deg,  rgba(255,127,0,0.8748686974789917)0%, rgba(192,112,168,0.8860731792717087) 100%), url($bg-img) 
+    background-size: contain
+    background-position: center 
+    &:hover 
+        background: linear-gradient(180deg, rgba(255,127,0,0.8748686974789917) 0%,rgba(133,90,186,0.930891106442577) 70%), url($bg-img)
+        background-size: contain
+        background-position: center
+
 .course_main 
     position: relative
     width: 100%
