--- a/app/sass/partials/_projects.sass
+++ b/app/sass/partials/_projects.sass
@@ -1,27 +1,146 @@
 // @import ('./lib/_variables.sass')
 // @import ('./lib/_type.sass')
-    
-.project_cards
+
+$windowHeight: 100vh
+$windowWidth: 100vw 
+
+@media (min-width: 150px) 
     .filter_options
         display: flex
-        button
-            border-radius: 4px
-            border-color: none
-    .project_card
-        @apply bg-ca_blue-200
-        border-radius: 8px
-        .year_and_cta
+        .button_filter
+            @apply bg-ca_blue-200
+            font-weight: 400
+            padding: 0.4rem 1.2rem
+        .button_filter:first-child
+            border-radius: 24px 0 0 24px
+        .button_filter:last-child
+            border-radius: 0 24px 24px 0
+    .project_cards
+        .project_card
+            @apply bg-ca_blue-200
+            border-radius: 8px
             display: flex
-            .date
-                border: 1px solid black
-                border-radius: 50px
-                padding: .5rem 5 .2rem .5rem
-            .date
-        .project_info
-            .project_title
-                @apply text-black
-                font-size: 1.25rem
-                    
-                    
-                    
-            .project_subtitle
+            gap: 16px
+            flex-direction: column
+            align-items: left
+            justify-content: space-between
+            height: 100%
+            .year_and_cta
+                @apply text-gray-400
+                display: flex
+                justify-content: space-between
+                .date
+                    color: black
+                    border: 1px solid black
+                    display: flex
+                    align-items: center
+                    padding: 1px 8px 
+                    font-weight: 600
+                    border-radius: 4px
+                a
+                    @apply text-ca_blue-700
+                    p
+                        display: inline
+                        margin-right: 0.6em
+            .project_info
+                @apply text-gray-400
+                .project_title 
+                    font-size: 1.25rem
+                    margin-bottom: 1rem
+                .project_subtitle
+                    font-weight: 500     
+            .project_tags
+                display: flex
+                flex-wrap: wrap
+                .project_tag
+                    @apply bg-ca_blue-300
+                    @apply text-blue-900
+                    border-radius:4px
+                    margin: 0 0.6rem 0.6rem 0
+                    padding: 4px 7px
+                    //font-size: 0.83rem
+                    font-weight:600
+@media (min-width: 640px)
+    .filter_options
+        display: flex
+        justify-content: center
+        .button_filter
+            @apply bg-ca_blue-100
+            font-weight: 600
+            padding: 1.2rem 2rem
+            transition: 100ms ease-out
+            cursor: pointer
+            @apply text-ca_blue-500
+            border-top: 4px solid #EBF0FF
+            border-bottom: 4px solid  #EBF0FF
+            
+            &:hover
+                @apply bg-ca_blue-200
+                transition: 100ms ease-out
+                
+            &:active
+                @apply bg-ca_blue-300
+                @apply text-blue-950
+        .button_filter:first-child
+            border-radius: 24px 2px 2px 24px
+            border-left: #EBF0FF 4px solid
+        .button_filter:last-child
+            border-radius: 2px 24px 24px 2px
+            border-right: #EBF0FF 4px solid
+        .selected
+            @apply bg-ca_blue-300
+            font-weight: 600 
+            padding: 1.2rem 1.96rem
+            @apply text-blue-950
+            
+            &:hover
+                @apply bg-ca_blue-300
+
+    .project_cards
+        .project_card
+            display: grid
+            grid-template-rows: $windowWidth/20 1fr auto
+            grid-gap:16px
+            .year_and_cta
+                .date
+                    height: 24px
+                p 
+                    font-weight: 600
+        
+@media (min-width: 770px)
+  
+    .project_cards
+        .filter_options
+            display: flex
+            .button_filter
+                @apply bg-ca_blue-200
+                font-weight: 400
+                padding: 0.4rem 1.2rem
+        .project_card
+            @apply bg-ca_blue-200
+            border-radius: 8px
+            display: grid
+            grid-template-rows: 40px 1fr auto
+            align-items: left
+            justify-content: space-between
+            height: 100%
+            .year_and_cta
+                display: flex
+                justify-content: space-between
+                .date
+                    border: 1px solid to-black
+                    height: 24px
+                    padding: 4px 10px 
+                    border-radius:4px
+                    font-size: 1rem
+                    font-weight: 600
+               
+            .project_info
+                @apply text-gray-400
+                .project_title 
+                    font-size: 1.25rem
+                .project_subtitle
+                    font-weight: 500     
+                        
+                        
+                .project_subtitle
