--- a/app/sass/partials/_projects.sass
+++ b/app/sass/partials/_projects.sass
@@ -1,4 +1,5 @@
-// @import ('./lib/_variables.sass')
+@import "../lib/_variables.sass"
+@import "../lib/_mixins.sass"
 // @import ('./lib/_type.sass')
 
 $windowHeight: 100vh
@@ -7,14 +8,28 @@ $windowWidth: 100vw
 @media (min-width: 150px) 
     .filter_options
         display: flex
+        gap: 0.4rem
+        flex-wrap: wrap
         .button_filter
-            @apply bg-ca_blue-200
-            font-weight: 400
-            padding: 0.4rem 1.2rem
-        .button_filter:first-child
-            border-radius: 24px 0 0 24px
-        .button_filter:last-child
-            border-radius: 0 24px 24px 0
+            @apply bg-ca_blue-100
+            font-weight: 600
+            padding: 0.6rem 1rem
+            transition: 100ms ease-out
+            cursor: pointer
+            @apply text-ca_blue-500
+            // border-top: 4px solid #EBF0FF
+            // border-bottom: 4px solid  #EBF0FF
+            border-radius: 24px
+            &:active
+                @apply bg-ca_blue-300
+                @apply text-blue-950
+
+        .selected
+            @apply bg-ca_blue-300
+            //font-weight: 600 
+            //padding: 1.2rem 1.96rem
+            @apply text-blue-950
+
     .project_cards
         .project_card
             @apply bg-ca_blue-200
@@ -30,13 +45,7 @@ $windowWidth: 100vw
                 display: flex
                 justify-content: space-between
                 .date
-                    color: black
-                    border: 1px solid black
-                    display: flex
-                    align-items: center
-                    padding: 1px 8px 
-                    font-weight: 600
-                    border-radius: 4px
+                    @include border-tag
                 a
                     @apply text-ca_blue-700
                     p
@@ -61,9 +70,25 @@ $windowWidth: 100vw
                     //font-size: 0.83rem
                     font-weight:600
 @media (min-width: 640px)
+    
+
+    .project_cards
+        .project_card
+            display: grid
+            grid-template-rows: $windowWidth/20 1fr auto
+            grid-gap:16px
+            .year_and_cta
+                .date
+                    height: 24px
+                p 
+                    font-weight: 600
+        
+@media (min-width: 770px)
+  
     .filter_options
         display: flex
         justify-content: center
+        gap:0
         .button_filter
             @apply bg-ca_blue-100
             font-weight: 600
@@ -73,6 +98,7 @@ $windowWidth: 100vw
             @apply text-ca_blue-500
             border-top: 4px solid #EBF0FF
             border-bottom: 4px solid  #EBF0FF
+            border-radius:0px
             
             &:hover
                 @apply bg-ca_blue-200
@@ -95,27 +121,6 @@ $windowWidth: 100vw
             
             &:hover
                 @apply bg-ca_blue-300
-
-    .project_cards
-        .project_card
-            display: grid
-            grid-template-rows: $windowWidth/20 1fr auto
-            grid-gap:16px
-            .year_and_cta
-                .date
-                    height: 24px
-                p 
-                    font-weight: 600
-        
-@media (min-width: 770px)
-  
-    .project_cards
-        .filter_options
-            display: flex
-            .button_filter
-                @apply bg-ca_blue-200
-                font-weight: 400
-                padding: 0.4rem 1.2rem
         .project_card
             @apply bg-ca_blue-200
             border-radius: 8px
@@ -128,13 +133,7 @@ $windowWidth: 100vw
                 display: flex
                 justify-content: space-between
                 .date
-                    border: 1px solid to-black
-                    height: 24px
-                    padding: 4px 10px 
-                    border-radius:4px
-                    font-size: 1rem
-                    font-weight: 600
-               
+                    @include border-tag
             .project_info
                 @apply text-gray-400
                 .project_title 
