recent publications cambiado

--- a/app/sass/main.scss
+++ b/app/sass/main.scss
@@ -7,7 +7,7 @@
 @import "partials/_tools.sass";
 @import "partials/_footer.sass";
 @import "lib/_responsive.sass";
-
+@import "partials/_recentPublications.sass";
 @import "lib/_type.sass";
 @import "lib/_variables.sass";
 @import "lib/_mixins.sass";
